--- a/package.json
+++ b/package.json
@@ -12,15 +12,19 @@
     "download-chainspec": "ts-node 'scripts/downdloadChainSpec.ts'"
   },
   "devDependencies": {
-    "@polkadot/api": "^10.9.1",
-    "@polkadot/api-augment": "^10.9.1",
-    "@polkadot/types": "^10.9.1",
-    "@polkadot/types-codec": "^10.9.1",
-    "@polkadot/util": "^12.3.2",
+    "@acala-network/chopsticks-utils": "^1.0.4",
+    "@polkadot/api": "^15.9.1",
+    "@polkadot/api-augment": "^15.9.1",
+    "@polkadot/types": "^15.9.1",
+    "@polkadot/types-codec": "^15.9.1",
+    "@polkadot/util": "^13.4.3",
+    "@polkadot/util-crypto": "^13.4.3",
     "@types/debug": "^4.1.8",
     "@types/node": "^20.3.2",
+    "@zombienet/utils": "^0.0.28",
     "bottleneck": "^2.19.5",
     "chalk": "^5.3.0",
+    "csv-parse": "^5.6.0",
     "debug": "^4.3.4",
     "json-bigint": "^1.0.0",
     "prettier": "^2.8.8",
@@ -29,8 +33,7 @@
     "typescript": "^5.1.6",
     "web3": "4.0.2",
     "web3-providers-ws": "4.0.2",
-    "yargs": "^17.7.2",
     "yaml": "2.3.1",
-    "@zombienet/utils": "^0.0.19"   
+    "yargs": "^17.7.2"
   }
 }
