--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@polkadot/util": "^12.3.2",
     "@types/debug": "^4.1.8",
     "@types/node": "^20.3.2",
+    "@zombienet/utils": "^0.0.19",
     "bottleneck": "^2.19.5",
     "chalk": "^5.3.0",
     "debug": "^4.3.4",
@@ -29,8 +30,10 @@
     "typescript": "^5.1.6",
     "web3": "4.0.2",
     "web3-providers-ws": "4.0.2",
-    "yargs": "^17.7.2",
     "yaml": "2.3.1",
-    "@zombienet/utils": "^0.0.19"   
+    "yargs": "^17.7.2"
+  },
+  "dependencies": {
+    "node-fetch": "2"
   }
 }
